--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "@testing-library/react": "^12.0.0",
     "@testing-library/user-event": "^13.2.1",
     "axios": "^0.27.2",
+    "fusioncharts": "^3.19.0",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-fusioncharts": "^4.0.0",
